crates/osp-core/tests/compile_fail/t2_operator_capability_literal.stderr
error[E0451]: field `_private` of struct `OperatorCapability` is private
  --> tests/compile_fail/t2_operator_capability_literal.rs:11:37
   |
11 |     let _cap = OperatorCapability { _private: () };
   |                                     ^^^^^^^^ private field
